# Mnemolens

./: .gitignore  Makefile  README.md
.agents/plugins/: marketplace.json
docs/: mcp-api.md  memory-lifecycle.md  rfc-local-context-layer.md
plugins/mnemolens/: .mcp.json  README.md
plugins/mnemolens/.codex-plugin/: plugin.json
plugins/mnemolens/scripts/: bootstrap  mnemolens-mcp
plugins/mnemolens/server/: pyproject.toml
plugins/mnemolens/server/mnemolens/: __init__.py  dream.py  embeddings.py  search.py  server.py  store.py
plugins/mnemolens/server/tests/: test_memory_store.py
plugins/mnemolens/skills/mnemolens-memory/: SKILL.md
