[project]
name = "mnemolens-server"
version = "0.1.0"
description = "Local FastMCP server for the Mnemolens Codex memory plugin."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
]

[project.scripts]
mnemolens-mcp = "mnemolens.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
